chore: migrate DomainError strings to ErrorCode enum; update validator and tests; add shim